stderr
JudgeMan.java:45: error: cannot find symbol
            intArray[i] = Integer.toInt(args[i]);
                                 ^
  symbol:   method toInt(String)
  location: class Integer
1 error
